// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Home > renders Level links 1`] = `
<div>
  <a
    href="/level/1/details"
  >
    Level 
    1
  </a>
  <a
    href="/level/2/details"
  >
    Level 
    2
  </a>
  <a
    href="/level/3/details"
  >
    Level 
    3
  </a>
</div>
`;

exports[`Home > renders error message on useLevelList error 1`] = `
<div>
  <p>
    Data fetching error.
  </p>
</div>
`;

exports[`Home > renders loading message on useLevelList loading 1`] = `
<div>
  <p>
    Loading...
  </p>
</div>
`;
